# Multi-Agent-AI-News-Curation-System

./: Dockerfile  README.md  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: cbe6d1f5fe2d_initial_saas_schema.py
app/: config.py  daily_runner.py  runner.py
app/agent/: base.py  curator_agent.py  digest_agent.py  email_agent.py
app/api/: dependencies.py  main.py
app/api/routers/: __init__.py  auth.py  digests.py  pipeline.py  sources.py  users.py
app/core/: security.py
app/database/: README.md  check_connection.py  connection.py  create_tables.py  models.py  repository.py
app/pipeline/: __init__.py  global_runner.py  scheduler.py  user_runner.py
app/scrapers/: __init__.py  anthropic.py  base.py  openai.py  youtube.py
app/services/: process_anthropic.py  process_curator.py  process_digest.py  process_email.py  process_youtube.py
docs/: DEPLOYMENT.md  RENDER_SETUP.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Layout.jsx  ProtectedRoute.jsx
frontend/src/pages/: Dashboard.jsx  Digests.jsx  Landing.jsx  Login.jsx  Register.jsx
frontend/src/pages/settings/: Email.jsx  Profile.jsx  Sources.jsx
frontend/src/store/: auth.js
